# CnC_Red_Alert

./: .editorconfig  CMakeLists.txt  CMakeSettings.json  README.md
CODE/: CMakeLists.txt
IPX/: CMakeLists.txt  IPX16.ASM  IPX16A.ASM  THMAP16.ASM
IPX/OK/: CMakeLists.txt  IPX16.ASM  IPX16A.ASM
IPX/OLD/: CMakeLists.txt  IPX16A.ASM
LAUNCH/: CMakeLists.txt  LAUNCH.ASM
LAUNCHER/: 256BMP.C  CMakeLists.txt  WDEBUG.H
LAUNCHER/UTIL/: CMakeLists.txt  STREAMER.H  WDEBUG.H
TOOLS/AUDIOMAK/: AUDIOMAK.CPP  CMakeLists.txt  SCODE.ASM
TOOLS/MIX/: CMakeLists.txt  MIXFILE.CPP
VQ/: CMakeLists.txt
VQ/INCLUDE/VQM32/: VESAVID.H  VESAVID.I  VIDEO.I
VQ/VQA32/: CAPTION.CPP  CMakeLists.txt  DRAWER.CPP  LOADER.CPP  TASK.CPP  UNVQ.H  UNVQBUFF.ASM  UNVQVESA.ASM  UNVQXMDE.ASM  VERTAG.CPP  VQAPLAYP.H
VQ/VQM32/: AUDUNZAP.ASM  AUDZAP.CPP  CMakeLists.txt  CRC.ASM  DRAWCHAR.ASM  FILLRECT.ASM  HUFFDCMP.ASM  LCWCOMP.ASM  LCWUNCMP.ASM  MCGABUF.ASM  MONO.ASM  PALETTE.ASM  PORTIO.ASM  PORTIO.H  SOSCODEC.ASM  TARGA.CPP  TEXTPRNT.ASM  VB.ASM  VERTAG.CPP  VESABUF.ASM  VESAVID.CPP  VESAVID.I  VIDEO.CPP  VIDEO.I  XMODE.ASM
WIN32LIB/: CMakeLists.txt
WIN32LIB/AUDIO/: AUDUNCMP.ASM  CMakeLists.txt  OLSOSDEC.ASM  SOSCODEC.ASM
WIN32LIB/AUDIO/OLD/: AUDUNCMP.ASM  CMakeLists.txt  OLSOSDEC.ASM
WIN32LIB/DRAWBUFF/: BITBLIT.ASM  CLEAR.ASM  CMakeLists.txt  DRAWLINE.ASM  FILLQUAD.ASM  FILLRECT.ASM  FTPUTPIX.ASM  GETCLIP.ASM  GETPIX.ASM  PUTPIX.ASM  REMAP.ASM  SCALE.ASM  SHADOW.ASM  STAMP.ASM  STMPCACH.ASM  SZREGION.ASM  TOBUFF.ASM  TOPAGE.ASM  TXTPRNT.ASM
WIN32LIB/DRAWBUFF/TEST/: CMakeLists.txt  TEST.CPP  TESTASM.ASM
WIN32LIB/EXAMPLE/: CMakeLists.txt
WIN32LIB/FONT/: SETFPAL.ASM  TEXTPRNT.ASM
WIN32LIB/IFF/: LCWCOMP.ASM  LCWUNCMP.ASM  PACK2PLN.ASM
WIN32LIB/INCLUDE/: DRAWBUFF.INC  GBUFFER.INC  MCGAPRIM.INC  MOUSE.INC  SHAPE.INC  STAMP.INC  SVGAPRIM.INC
WIN32LIB/KEYBOARD/: CMakeLists.txt  MOUSE.INC  WWMOUSE.ASM
WIN32LIB/KEYBOARD/OLD/: CMakeLists.txt  KEYBOARD.ASM  KEYIPROT.ASM  KEYIREAL.ASM  MOUSE.ASM  PAGFAULT.ASM  WWMOUSE.ASM
WIN32LIB/KEYBOARD/OLDTEST/: CMakeLists.txt
WIN32LIB/KEYBOARD/TEST/: CMakeLists.txt  TEST.CPP  TESTASM.ASM
WIN32LIB/MEM/: CMakeLists.txt  MEM_COPY.ASM  VMPAGEIN.ASM  WWMEM.INC
WIN32LIB/MEM/MSVC/: CMakeLists.txt  MEM_COPY.ASM
WIN32LIB/MEM/OLDMEM/: CMakeLists.txt  MEM_COPY.ASM
WIN32LIB/MISC/: CLIPRECT.ASM  CRC.ASM  DETPROC.ASM  FACING16.ASM  FACING8.ASM  FACINGFF.ASM  FADING.ASM  OPSYS.ASM  RANDOM.ASM  REVERSE.ASM  SHAKESCR.ASM
WIN32LIB/PALETTE/: CMakeLists.txt  PAL.ASM
WIN32LIB/PLAYCD/: CMakeLists.txt  PLAYCD.ASM
WIN32LIB/PROFILE/: APROFILE.ASM  CMakeLists.txt  PROFILE.INC
WIN32LIB/PROFILE/UTIL/: CMakeLists.txt
WIN32LIB/SHAPE/: DRAWSHP.ASM  DS_DN.ASM  DS_DR.ASM  DS_DS.ASM  DS_DSR.ASM  DS_LRS.ASM  DS_LS.ASM  DS_LSRS.ASM  DS_LSS.ASM  DS_RRS.ASM  DS_RS.ASM  DS_RSRS.ASM  DS_RSS.ASM  DS_TABLE.ASM  SETSHAPE.ASM  SHAPE.ASM  SHAPE.INC
WIN32LIB/SRCDEBUG/: APROFILE.ASM  AUDUNCMP.ASM  BITBLIT.ASM  CLEAR.ASM  CLIPRECT.ASM  CMakeLists.txt  CRC.ASM  DETPROC.ASM  DEVICES.ASM  DEVTABLE.ASM  DRAWLINE.ASM  DRAWSHP.ASM  DS_DN.ASM  DS_DR.ASM  DS_LS.ASM  DS_LSS.ASM  DS_RSS.ASM  FACING8.ASM  FADING.ASM  FFIRST.ASM  FFIXSEL.ASM  FGETCS.ASM  FGETDS.ASM  FGETSEL.ASM  FILLQUAD.ASM  FILLRECT.ASM  FTPUTPIX.ASM  GETCLIP.ASM  HARDERR.ASM  KEYBOARD.ASM  KEYIPROT.ASM  KEYIREAL.ASM  LCWCOMP.ASM  LCWUNCMP.ASM  MEM_COPY.ASM  MONO.ASM  MOUSE.ASM  OLSOSDEC.ASM  PACK2PLN.ASM  PAGFAULT.ASM  (+39 more)
WIN32LIB/WSA/: XORDELTA.ASM
WIN32LIB/WW_WIN/: CMakeLists.txt
WIN32LIB/WW_WIN/OLD/: CMakeLists.txt
WINVQ/: CMakeLists.txt
WINVQ/INCLUDE/VQM32/: PORTIO.H  VESAVID.H  VESAVID.I  VGA.I  VIDEO.I
WINVQ/LIB/: CMakeLists.txt
WINVQ/VPLAY32/: CMakeLists.txt  PLYVQA32.CPP
WINVQ/VQA32/: CMakeLists.txt  DRAWER.CPP  UNVQ.H  UNVQBUFF.ASM  UNVQVESA.ASM  UNVQXMDE.ASM  VERTAG.CPP  VQAPLAYP.H
WINVQ/VQAVIEW/: CMakeLists.txt  INTERPAL.ASM
WINVQ/VQM32/: AUDUNZAP.ASM  CMakeLists.txt  CRC.ASM  DRAWCHAR.ASM  FILLRECT.ASM  HUFFDCMP.ASM  IFF.CPP  LCWCOMP.ASM  LCWUNCMP.ASM  MCGABUF.ASM  MONO.ASM  PALETTE.ASM  PORTIO.ASM  SOSCODEC.ASM  TESTVB.CPP  TEXTPRNT.ASM  VB.ASM  VERTAG.CPP  VESABUF.ASM  VESAVID.I  VGA.I  VIDEO.I  XMODE.ASM
WWFLAT32/: CMakeLists.txt
WWFLAT32/AUDIO/: CMakeLists.txt
WWFLAT32/DESCMGMT/: FFIXSEL.ASM  FGETCS.ASM  FGETDS.ASM  FGETSEL.ASM
WWFLAT32/EXAMPLE/: CMakeLists.txt
WWFLAT32/FILE/: CMakeLists.txt  DEVICES.ASM  DEVTABLE.ASM  FFIRST.ASM  HARDERR.ASM
WWFLAT32/FONT/: SETFPAL.ASM  TEXTPRNT.ASM
WWFLAT32/IFF/: CMakeLists.txt  LCWCOMP.ASM  LCWUNCMP.ASM  PACK2PLN.ASM
WWFLAT32/INCLUDE/: GBUFFER.INC  KEYSTRUC.INC  MCGAPRIM.INC  SHAPE.INC  SVGAPRIM.INC
WWFLAT32/KEYBOARD/: CMakeLists.txt  KEYIPROT.ASM  KEYIREAL.ASM  PAGFAULT.ASM
WWFLAT32/LIB/: CMakeLists.txt
WWFLAT32/MCGAPRIM/: BITBLIT.ASM  CLEAR.ASM  DRAWLINE.ASM  FILLQUAD.ASM  FILLRECT.ASM  GBUFFER.INC  GETCLIP.ASM  GETPIX.ASM  PUTPIX.ASM  REMAP.ASM  SCALE.ASM  SHADOW.ASM  STAMP.ASM  STAMP.INC  SZREGION.ASM  TOBUFF.ASM  TOPAGE.ASM  TXTPRNT.ASM  VBITBLIT.ASM  VCLEAR.ASM  VESA.ASM  VGETPIX.ASM  VLBTOVE.ASM  VPUTPIX.ASM  VSCALE.ASM  VSCLTOVE.ASM  VTOBUFF.ASM  VTOPAGE.ASM  VTXTPRNT.ASM  VVBLIT.ASM  VVETOLB.ASM  VVETOSCL.ASM
WWFLAT32/MEM/: CMakeLists.txt  MEM_COPY.ASM
WWFLAT32/MISC/: ASM.ASM  CLIPRECT.ASM  CRC.ASM  DETPROC.ASM  FACING16.ASM  FACING8.ASM  FACINGFF.ASM  FADING.ASM  OPSYS.ASM  PROC.ASM  RANDOM.ASM  REVERSE.ASM  SHAKESCR.ASM
WWFLAT32/MONO/: CMakeLists.txt  MONO.ASM
WWFLAT32/PALETTE/: PAL.ASM
WWFLAT32/PLAYCD/: PLAYCD.ASM
WWFLAT32/SHAPE/: CMakeLists.txt  DRAWSHP.ASM  DS_DN.ASM  DS_DR.ASM  DS_DS.ASM  DS_DSR.ASM  DS_LRS.ASM  DS_LS.ASM  DS_LSRS.ASM  DS_LSS.ASM  DS_RRS.ASM  DS_RS.ASM  DS_RSRS.ASM  DS_RSS.ASM  DS_TABLE.ASM  SETSHAPE.ASM
WWFLAT32/SRCDEBUG/: CMakeLists.txt  KEYBOARD.ASM  KEYIPROT.ASM  KEYIREAL.ASM
WWFLAT32/SVGAPRIM/: VCLEAR.ASM  VESA.ASM  VGETPIX.ASM  VLBTOVE.ASM  VPUTPIX.ASM  VSCLTOVE.ASM  VTOBUFF.ASM  VTOPAGE.ASM  VTXTPRNT.ASM  VVBLIT.ASM  VVETOLB.ASM
WWFLAT32/TIMER/: TIMERA.ASM  TIMEREAL.ASM
WWFLAT32/VIDEO/: VERTBLNK.ASM  VESAHOOK.ASM  VESAREAL.ASM
WWFLAT32/WSA/: XORDELTA.ASM
(+38 files in other folders)
