include(project_component_helpers)
set_project_component_name()

set(PROJECT_COMPONENT_ROOT_NAME ${PROJECT_COMPONENT_NAME})
set(PROJECT_COMPONENT_ROOT_INCLUDE_DIR
  "${CMAKE_CURRENT_SOURCE_DIR}/INCLUDE"
)
unset(PROJECT_COMPONENT_ROOT_SOURCE_FILES)
foreach(PROJECT_COMPONENT_SUBDIR_NAME
  AUDIO DESCMGMT DIPTHONG FILE FONT IFF KEYBOARD MCGAPRIM MEM MISC MONO PALETTE
  PLAYCD SHAPE SVGAPRIM TILE TIMER VIDEO WINDOWS WSA
)
  add_subdirectory(${PROJECT_COMPONENT_SUBDIR_NAME})
  list(APPEND PROJECT_COMPONENT_ROOT_SOURCE_FILES
    "$<TARGET_OBJECTS:${PROJECT_COMPONENT_ROOT_NAME}_${PROJECT_COMPONENT_SUBDIR_NAME}>"
  )
endforeach()
add_library(${PROJECT_COMPONENT_ROOT_NAME} STATIC
  ${PROJECT_COMPONENT_ROOT_SOURCE_FILES}
)

add_subdirectory(EXAMPLE)
