add_library(WWFLAT32 STATIC)
target_include_directories(WWFLAT32
  PUBLIC
    "INCLUDE"
)

add_subdirectory(AUDIO)
add_subdirectory(DESCMGMT)
add_subdirectory(DIPTHONG)
add_subdirectory(EXAMPLE)
add_subdirectory(FILE)
add_subdirectory(FONT)
add_subdirectory(IFF)
add_subdirectory(INCLUDE)
add_subdirectory(KEYBOARD)
add_subdirectory(LIB)
add_subdirectory(MCGAPRIM)
add_subdirectory(MEM)
add_subdirectory(MISC)
add_subdirectory(MONO)
add_subdirectory(PALETTE)
add_subdirectory(PLAYCD)
add_subdirectory(SHAPE)
if(WITH_REDUNDANT_SUBDIRECTORY_TARGETS)
add_subdirectory(SRCDEBUG)
endif(WITH_REDUNDANT_SUBDIRECTORY_TARGETS)
add_subdirectory(SVGAPRIM)
add_subdirectory(TILE)
add_subdirectory(TIMER)
add_subdirectory(VIDEO)
add_subdirectory(WINDOWS)
add_subdirectory(WSA)
