include(project_component)
project_subcomponent(CONFIGURE_DEPENDS)

add_library(${PROJECT_SUBCOMPONENT_NAME} OBJECT
  ${PROJECT_SUBCOMPONENT_ANY_LANG_SOURCE_FILES}
)
target_include_directories(${PROJECT_SUBCOMPONENT_NAME} PRIVATE
  ${PROJECT_SUBCOMPONENT_INCLUDE_DIRS}
)
set_source_files_properties(
  ${PROJECT_SUBCOMPONENT_ASM_MASM_SOURCE_FILES}
  PROPERTIES LANGUAGE ASM_MASM
)
