include(project_component)
include(file_glob_target)
project_component(DEFAULT "../INCLUDE;../INCLUDE/VQA32;../INCLUDE/VQM32" CONFIGURE_DEPENDS)

add_library(${PROJECT_COMPONENT_NAME} STATIC
  ${PROJECT_COMPONENT_ANY_LANG_SOURCE_FILES}
  ${PROJECT_COMPONENT_ANY_LANG_IGNORE_FILES}
)
target_include_directories(${PROJECT_COMPONENT_NAME} PUBLIC
  ${PROJECT_COMPONENT_INCLUDE_DIRS}
)
foreach(PROJECT_COMPONENT_INCLUDE_DIR IN LISTS PROJECT_COMPONENT_INCLUDE_DIRS)
  list(TRANSFORM CMAKE_ANY_LANG_IGNORE_LOCAL_GLOBS
    PREPEND "${PROJECT_COMPONENT_INCLUDE_DIR}/"
    OUTPUT_VARIABLE PROJECT_COMPONENT_INCLUDE_FILE_GLOBS
  )
  file(GLOB PROJECT_COMPONENT_INCLUDE_FILES
    CONFIGURE_DEPENDS ${PROJECT_COMPONENT_INCLUDE_FILE_GLOBS}
  )
  target_sources(${PROJECT_COMPONENT_NAME} PUBLIC
    FILE_SET HEADERS TYPE HEADERS
    BASE_DIRS "../INCLUDE"
    FILES ${PROJECT_COMPONENT_INCLUDE_FILES}
  )
endforeach()
