file_glob_enabled_language_files()

add_library(VQM32_PORTIO OBJECT PORTIO.ASM)
target_compile_definitions(VQM32_PORTIO
  PUBLIC PHARLAP_TNT=0
)
set_source_files_properties(PORTIO.ASM PROPERTIES LANGUAGE ASM_MASM)
# PORTIO implemented as compiler intrinsic in VQM32
list(REMOVE_ITEM PROJECT_ASM_MASM_SOURCE_FILES PORTIO.ASM)
list(REMOVE_ITEM PROJECT_ANY_LANG_SOURCE_FILES PORTIO.ASM)

add_library(VQM32 STATIC)
target_link_libraries(VQM32 PUBLIC VQ_INCLUDE)
target_compile_definitions(VQM32
  PUBLIC
    PHARLAP_TNT=0
)
target_include_directories(VQM32
  PUBLIC
    "../INCLUDE/VQM32"
)
# temporarily disable specific sources
list(
  REMOVE_ITEM PROJECT_CURRENT_SOURCE_DIR_CXX_SOURCE_FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/VIDEO.CPP"
  "${CMAKE_CURRENT_SOURCE_DIR}/VESAVID.CPP"
)
list(
  REMOVE_ITEM PROJECT_CURRENT_SOURCE_DIR_ANY_LANG_SOURCE_FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/VIDEO.CPP"
  "${CMAKE_CURRENT_SOURCE_DIR}/VESAVID.CPP"
)
target_sources(VQM32
  PRIVATE ${PROJECT_CURRENT_SOURCE_DIR_ANY_LANG_SOURCE_FILES}
)
target_sources(VQM32
  PRIVATE
    FILE_SET private_headers
    TYPE HEADERS
    FILES ${PROJECT_CURRENT_SOURCE_DIR_ANY_LANG_IGNORES}
)
target_sources(VQM32
  PUBLIC
    FILE_SET HEADERS
    BASE_DIRS ../INCLUDE
    FILES
      ${PROJECT_VQ_INCLUDE_ANY_LANG_IGNORES}
      ${PROJECT_VQM32_INCLUDE_ANY_LANG_IGNORES}
)

set_asm_masm_source_files_language_property()
