cmake_path(GET CMAKE_CURRENT_SOURCE_DIR
  FILENAME PROJECT_CURRENT_SOURCE_DIR_NAME
)
file_glob_enabled_language_files()
list(
  REMOVE_ITEM PROJECT_CURRENT_SOURCE_DIR_CXX_SOURCE_FILES
   "TEST.CPP"
   "TST.CPP"
)
list(
  REMOVE_ITEM PROJECT_CURRENT_SOURCE_DIR_ANY_LANG_SOURCE_FILES
   "TEST.CPP"
   "TST.CPP"
)

add_library(WIN32LIB_${PROJECT_CURRENT_SOURCE_DIR_NAME} STATIC)
target_include_directories(WIN32LIB_${PROJECT_CURRENT_SOURCE_DIR_NAME}
  PUBLIC
    ../INCLUDE
)
target_sources(WIN32LIB_${PROJECT_CURRENT_SOURCE_DIR_NAME}
  PRIVATE
    ${PROJECT_CURRENT_SOURCE_DIR_ANY_LANG_SOURCE_FILES}
)
target_sources(WIN32LIB_${PROJECT_CURRENT_SOURCE_DIR_NAME}
  PRIVATE
    FILE_SET HEADERS
    BASE_DIRS ../INCLUDE
    FILES ${PROJECT_WIN32LIB_INCLUDE_ANY_LANG_IGNORES}
)
target_link_libraries(WIN32LIB PRIVATE WIN32LIB_${PROJECT_CURRENT_SOURCE_DIR_NAME})

add_executable(WIN32LIB_AUDIO_TEST WIN32 EXCLUDE_FROM_ALL "TEST.CPP")
target_link_libraries(WIN32LIB_AUDIO_TEST PRIVATE WIN32LIB_AUDIO)

add_executable(WIN32LIB_AUDIO_TST EXCLUDE_FROM_ALL "TST.CPP")
target_link_libraries(WIN32LIB_AUDIO_TST PRIVATE WIN32LIB_AUDIO)

set_asm_masm_source_files_language_property()
