file_glob_enabled_languages_source_files()

add_executable(VPLAY32)
target_include_directories(VPLAY32
  PRIVATE
    ../INCLUDE
    ../INCLUDE/VQM32
)
target_sources(VPLAY32
  PRIVATE ${PROJECT_ANY_LANG_SOURCE_FILES}
)
target_sources(VPLAY32
  PRIVATE
    FILE_SET HEADERS
    FILES ${PROJECT_ANY_LANG_IGNORES}
)
list(TRANSFORM CMAKE_CXX_IGNORE_GLOB_EXPRESSIONS
  PREPEND "../INCLUDE/"
  OUTPUT_VARIABLE PROJECT_CXX_IGNORE_GLOB_EXPRESSIONS
)
file(GLOB_RECURSE PROJECT_CXX_IGNORES
  ${PROJECT_CXX_IGNORE_GLOB_EXPRESSIONS}
)
target_sources(VPLAY32
  PRIVATE
    FILE_SET include
    TYPE HEADERS
    BASE_DIRS "../INCLUDE"
    FILES ${PROJECT_CXX_IGNORES}
)
target_link_libraries(VPLAY32 PRIVATE WINVQ_SOSDW1PS)
install(TARGETS VPLAY32)
