file_glob_enabled_language_files()

add_executable(VPLAY32)
target_compile_definitions(VPLAY32
  PRIVATE
    VQAMONO_ON=1
    VQAAUDIO_ON=1
    VQAVOC_ON=1
    VQAMCGA_ON=1
    VQAXMODE_ON=1
    VQAVESA_ON=1
    VPLAY32_TEXT=0
)
target_sources(VPLAY32
  PRIVATE ${PROJECT_CURRENT_SOURCE_DIR_ANY_LANG_SOURCE_FILES}
)
target_sources(VPLAY32
  PRIVATE
    FILE_SET private_headers
    TYPE HEADERS
    FILES ${PROJECT_CURRENT_SOURCE_DIR_ANY_LANG_IGNORES}
)
target_sources(VPLAY32
  PRIVATE
    FILE_SET HEADERS
    BASE_DIRS ../INCLUDE
    FILES
      ${PROJECT_WINVQ_INCLUDE_ANY_LANG_IGNORES}
      ${PROJECT_WINVQM32_INCLUDE_ANY_LANG_IGNORES}
      ${PROJECT_WINVQA32_INCLUDE_ANY_LANG_IGNORES}
)
target_link_libraries(VPLAY32
  PRIVATE
    WINVQA32
)
install(TARGETS VPLAY32)

set_asm_masm_source_files_language_property()
