file_glob_enabled_languages_source_files()

add_library(WINVQA32 STATIC)
target_compile_definitions(WINVQA32
  PUBLIC
    PHARLAP_TNT=0
)
target_include_directories(WINVQA32
  PUBLIC
    ../INCLUDE
)
target_include_directories(WINVQA32
  INTERFACE
    ../INCLUDE/VQA32
)
target_include_directories(WINVQA32
  PRIVATE
    ../INCLUDE/VQM32
)
target_sources(WINVQA32
  PRIVATE ${PROJECT_ANY_LANG_SOURCE_FILES}
)
target_sources(WINVQA32
  PRIVATE
    FILE_SET HEADERS
    FILES ${PROJECT_ANY_LANG_IGNORES}
)
list(TRANSFORM CMAKE_CXX_IGNORE_GLOB_EXPRESSIONS
  PREPEND "../INCLUDE/"
  OUTPUT_VARIABLE PROJECT_CXX_IGNORE_GLOB_EXPRESSIONS
)
file(GLOB_RECURSE PROJECT_CXX_IGNORES
  ${PROJECT_CXX_IGNORE_GLOB_EXPRESSIONS}
)
target_sources(WINVQA32
  PRIVATE
    FILE_SET include
    TYPE HEADERS
    BASE_DIRS "../INCLUDE"
    FILES ${PROJECT_CXX_IGNORES}
)

if(WITH_REDUNDANT_SUBDIRECTORY_TARGETS)
add_subdirectory(OLD)
endif(WITH_REDUNDANT_SUBDIRECTORY_TARGETS)
