file_glob_enabled_language_files()
list(REMOVE_ITEM PROJECT_CURRENT_SOURCE_DIR_CXX_SOURCE_FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/DEBUG.CPP"
)
list(REMOVE_ITEM PROJECT_CURRENT_SOURCE_DIR_RC_SOURCE_FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/DEBUG.RC"
)
list(REMOVE_ITEM PROJECT_CURRENT_SOURCE_DIR_ANY_LANG_SOURCE_FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/DEBUG.CPP"
  "${CMAKE_CURRENT_SOURCE_DIR}/DEBUG.RC"
)

add_executable(VQAVIEW)
target_sources(VQAVIEW
  PRIVATE
    ${PROJECT_CURRENT_SOURCE_DIR_ANY_LANG_SOURCE_FILES}
    $<$<CONFIG:Debug>:DEBUG.CPP>
    $<$<CONFIG:Debug>:DEBUG.RC>
)
target_sources(VQAVIEW
  PRIVATE
    FILE_SET private_headers
    TYPE HEADERS
    FILES
      ${PROJECT_CURRENT_SOURCE_DIR_ANY_LANG_IGNORES}
)
target_sources(VQAVIEW
  PRIVATE
    FILE_SET HEADERS
    BASE_DIRS
      ../INCLUDE
    FILES
      ${PROJECT_WINVQ_INCLUDE_ANY_LANG_IGNORES}
      ${PROJECT_WINVQM32_INCLUDE_ANY_LANG_IGNORES}
      ${PROJECT_WINVQA32_INCLUDE_ANY_LANG_IGNORES}
)
target_link_libraries(VQAVIEW
  PRIVATE
    WINVQA32
)
install(TARGETS VQAVIEW)

set_asm_masm_source_files_language_property()
